--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,88 @@
+aiohappyeyeballs==2.6.1
+aiohttp==3.11.17
+aiosignal==1.3.2
 asgiref==3.11.1
+asttokens==3.0.1
+attrs==25.3.0
+babel==2.17.0
+backrefs==5.8
+certifi==2025.1.31
+charset-normalizer==3.4.1
+click==8.1.8
+colorama==0.4.6
+comm==0.2.3
+contourpy==1.3.3
+cycler==0.12.1
+dateparser==1.2.1
+debugpy==1.8.19
+decorator==5.2.1
 Django==6.0.2
+executing==2.2.1
+fonttools==4.61.1
+frozenlist==1.6.0
+ghp-import==2.1.0
+greenlet==3.3.0
 gunicorn==25.0.3
+idna==3.10
+ipykernel==7.1.0
+ipython==9.9.0
+ipython_pygments_lexers==1.1.1
+jedi==0.19.2
+Jinja2==3.1.6
+jupyter_client==8.8.0
+jupyter_core==5.9.1
+kiwisolver==1.4.9
+Markdown==3.7
+MarkupSafe==3.0.2
+matplotlib==3.10.8
+matplotlib-inline==0.2.1
+mergedeep==1.3.4
+mkdocs==1.6.1
+mkdocs-get-deps==0.2.0
+mkdocs-material==9.6.11
+mkdocs-material-extensions==1.3.1
+multidict==6.4.3
+nest-asyncio==1.6.0
+numpy==2.4.1
 packaging==26.0
-sqlparse==0.5.5
-tzdata==2025.3
+paginate==0.5.7
+pandas==2.3.3
+parso==0.8.5
+pathspec==0.12.1
+pillow==11.0.0
+platformdirs==4.3.7
+prompt_toolkit==3.0.52
+propcache==0.3.1
+psutil==7.2.1
+psycopg2-binary==2.9.11
+pure_eval==0.2.3
+pycryptodome==3.22.0
+Pygments==2.19.1
+pymdown-extensions==10.14.3
+pyparsing==3.3.1
+python-binance==1.0.28
+python-dateutil==2.9.0.post0
 python-decouple==3.8
-Pillow==11.0.0
+pytz==2025.2
+PyYAML==6.0.2
+pyyaml_env_tag==0.1
+pyzmq==27.1.0
+regex==2024.11.6
+requests==2.32.3
+seaborn==0.13.2
+six==1.17.0
+SQLAlchemy==2.0.45
+sqlparse==0.5.5
+stack-data==0.6.3
+tornado==6.5.4
+traitlets==5.14.3
+typing_extensions==4.15.0
+tzdata==2025.3
+tzlocal==5.3.1
+urllib3==2.3.0
+waitress==3.0.2
+watchdog==6.0.0
+wcwidth==0.2.14
+websockets==15.0.1
 whitenoise==6.6.0
+yarl==1.20.0
