--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,12 @@
+
+# Chave secreta do Django
+# Substitua pelo valor gerado com a execução de `python -c "from django.core.management.utils import get_random_secret_key; print(get_random_secret_key())"`
 SECRET_KEY=your-secret-key-here
-DEBUG=False
-ALLOWED_HOSTS=yourdomain.koyeb.app,www.yourdomain.koyeb.app
+
+# Ativa ou desativa o modo de debug
+# True para desenvolvimento, False para produção
+DEBUG=True
+
+# Hosts permitidos para acessar o site
+# Separe múltiplos hosts por vírgula
+ALLOWED_HOSTS=localhost,127.0.0.1,www.seudominio.com
